# mission-control

./: .gitignore  .gitmodules  IMPROVEMENT_PLAN.md  MANIFEST.in  PIPELINE_CONTRACT.md  README.md  orchestrator.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: canonical.yml  smoke.yml
__tests__/: agent-command-config.test.ts  orchestrator-logic.test.ts
__tests__/fixtures/: smoke_5m.csv  smoke_run.json
agents/: charlie.md  dj.md  ralph.md  steven.md
app/: globals.css  layout.tsx  page.tsx
app/api/activity/: route.ts
app/api/agents/: route.ts
app/api/channel-messages/: route.ts
app/api/channels/: route.ts
app/api/docs/: route.ts
app/api/messages/: route.ts
app/api/metrics/: route.ts
app/api/mission-control/: route.ts
app/api/orchestrator/: route.ts
app/api/pool-config/: route.ts
app/api/projects/: route.ts
app/api/roles/: route.ts
app/api/settings/: route.ts
components/: agent-dashboard.tsx  app-shell.tsx  approvals-screen.tsx  calendar-screen.tsx  channel-screen.tsx  docs-screen.tsx  memory-screen.tsx  office-screen.tsx  projects-screen.tsx  settings-screen.tsx  sidebar.tsx  spawn-agent-modal.tsx  task-board.tsx  team-screen.tsx
data/: docs.json  pool-config.json  promotion_gate_template.md  r2_research_scope_spec.md
lib/: agent-command-config.ts  mission-control-data.ts  mission-control-server.ts  orchestrator-logic.ts  pipeline-schema.ts  store.ts
mission_control_cli/: __init__.py  __main__.py  cli.py  server.py
roles/: architect.md  comms.md  engineer.md  ops.md  orchestrator.md  qa.md  researcher.md
(+5 files in other folders)
