[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-control-ai"
version = "0.1.0"
description = "Local-first multi-agent coordination dashboard for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Djibril Keita"},
]
keywords = ["ai", "agents", "dashboard", "orchestrator", "mission-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
memory = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "sentence-transformers>=3,<4",
    "qdrant-client>=1.9",
    "pydantic>=2,<3",
    "numpy>=1.26",
    "einops>=0.8.0",
]

[project.scripts]
mission-control = "mission_control_cli.cli:main"

[tool.setuptools]
packages = ["mission_control_cli"]

[tool.setuptools.package-data]
mission_control_cli = ["project_files/**/*"]
